--- a/src/molecules/Modal.scss
+++ b/src/molecules/Modal.scss
@@ -5,42 +5,48 @@
     backdrop-filter: blur(0px);
   }
   to {
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(6px);
   }
 }
 
 @keyframes modal-content-start-over {
   from {
     opacity: 0;
-    //transform: translateY(100px);
+    transform: translateY(100px);
     transform: scale(0.9);
   }
   to {
     opacity: 1;
-    //transform: translateY(0px);
+    transform: translateY(0px);
     transform: scale(1);
   }
 }
 
-.modal {
-  display: none;
+.modal-frame {
+  display: flex;
   position: fixed;
+  align-items: center;
+  justify-content: center;
   top: $top-bar-height;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: 101;
-  transition: 0.5s ease;
-  opacity: 0;
+  pointer-events: none;
 
   &.active {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 1;
+    pointer-events: all;
+
+    .modal-content {
+      transform: translateY(0px);
+      opacity: 1;
+    }
 
     .modal-back-panel {
-      animation: blur-in forwards 0.4s ease;
+      backdrop-filter: blur(6px);
+      background: rgba(0, 0, 0, 0.6);
+      // animation: blur-in forwards 0.4s ease;
     }
   }
 }
@@ -49,14 +55,19 @@
   display: flex;
   flex-direction: column;
   background: $main-bg-color;
-  border: 1px solid #87a1b4;
-  padding: 40px;
+  padding: 30px;
   box-sizing: border-box;
   min-width: 300px;
   min-height: 400px;
   position: relative;
   box-shadow: 0 0 50px 5px rgba(0, 0, 0, 0.5);
-  animation: modal-content-start-over 0.4s ease;
+  border-radius: 5px;
+  // animation: modal-content-start-over 0.4s ease;
+  transition: 0.5s ease;
+  transform: translateY(-100px);
+  opacity: 0;
+  overflow-y: overlay;
+  overflow-x: hidden;
 
   & > .close-button {
     display: flex;
@@ -66,10 +77,13 @@
     //padding: 5px;
     cursor: pointer;
     transition: 0.1s ease;
-    font-size: 20px;
+    font-size: 24px;
+    opacity: 0.5;
+    pointer-events: all;
 
     &:hover {
       transform: scale(1.2);
+      opacity: 1;
     }
   }
 }
@@ -80,8 +94,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0);
   backdrop-filter: blur(0);
+  transition: 0.5s ease;
   //transition: 5s backdrop-filter ease;
   //opacity: 0;
   //z-index: 100;
