--- a/src/pages/Session.scss
+++ b/src/pages/Session.scss
@@ -11,6 +11,28 @@
       width: 100%;
       object-fit: contain;
     }
+
+    .idle-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(5px);
+      z-index: 3;
+
+      .text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        white-space: nowrap;
+
+        font-size: 24px;
+        color: rgb(63, 63, 63);
+      }
+    }
   }
 
   .title-wrapper {
@@ -23,6 +45,14 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    z-index: 10;
+
+    .constraints,
+    .watchers {
+      font-size: 12px;
+      margin-top: 8px;
+      color: rgb(160, 160, 160);
+    }
 
     .room-id {
       display: flex;
@@ -32,6 +62,7 @@
       margin-top: 8px;
       padding: 5px 8px;
       box-sizing: border-box;
+      border-radius: 5px;
 
       svg {
         opacity: 0.7;
@@ -62,6 +93,7 @@
     transition: 0.5s ease;
     opacity: 0;
     pointer-events: none;
+    z-index: 8;
 
     &.show {
       transform: translateX(0);
@@ -90,6 +122,15 @@
           display: flex;
           // flex-direction: column;
           align-items: flex-start;
+
+          &.system {
+            // font-style: italic;
+
+            .content {
+              color: rgb(186, 146, 255);
+              font-weight: bold;
+            }
+          }
 
           .nickname {
             font-size: 14px;
@@ -140,6 +181,7 @@
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 15;
 
     .controller {
       display: flex;
@@ -193,6 +235,55 @@
       &:hover {
         transform: scale(1.05);
         opacity: 1;
+      }
+    }
+  }
+
+  .sub-controllers {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    // transform: translateX(-50%);
+    z-index: 15;
+
+    .sub-controller {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 30px;
+      height: 30px;
+      background-color: rgb(85, 85, 85);
+      border-radius: 50%;
+      margin: 0 5px;
+      transition: 0.2s ease;
+      cursor: pointer;
+      font-size: 20px;
+      opacity: 0.3;
+
+      &:hover {
+        transform: scale(1.05);
+        opacity: 1;
+      }
+
+      &.volume {
+        position: relative;
+
+        &.hovered {
+          .volume-bar {
+            display: block;
+          }
+        }
+
+        .volume-bar {
+          display: none;
+          position: absolute;
+          top: 0;
+          left: 50%;
+          transform: translateX(-50%);
+        }
       }
     }
   }
